582864 incorporate changes from PR #13